# fastsql

./: .gitignore  00_core.ipynb  CHANGELOG-commonmark.md  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.md  README.md  _quarto.yml  core.html  core.html.md  db_dc.py  index.html  index.html.md  index.ipynb  nbdev.yml  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  test_insert.html  test_insert.html.md  test_insert.ipynb  test_update.html  test_update.html.md  test_update.ipynb  test_upsert.html  test_upsert.html.md  test_upsert.ipynb
cat_migrations/: 1-add_color_to_cat.sql
fastalchemy/: _modidx.py  core.py
fastsql/: __init__.py  _modidx.py  core.py
migrations/: 1-add_priority_and_due_date_to_todo.sql  1-add_priority_to_todo.sql
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
site_libs/bootstrap/: bootstrap-a3f6bd1e97f121887d2ce1b8fe2cd664.min.css
