[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastsql"
dynamic = ["version"]
description = "A MiniDataAPI spec implementation for SQLAlchemy V2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard, Daniel Roy Greenfeld, and Answer.AI team", email = "info@answer.ai"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore>=1.7.1', 'sqlalchemy', 'sqlparse']

[project.urls]
Repository = "https://github.com/answerdotai/fastsql"
Documentation = "https://answerdotai.github.io/fastsql"

[project.entry-points.nbdev]
fastsql = "fastsql._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastsql.__version__"}

[tool.setuptools.packages.find]
include = ["fastsql"]

[tool.nbdev]
nbs_path = '.'
recursive = false
custom_sidebar = false
